Bug 579430 - 9 test failures in org.eclipse.jdt.compiler.apt.tests
Change-Id: I659505c544d27b64eaaadc67a86accc3dad053e9
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>
Reviewed-on: https://git.eclipse.org/r/c/jdt/eclipse.jdt.core/+/192276
Tested-by: JDT Bot <jdt-bot@eclipse.org>
Reviewed-by: Sravan Kumar Lakkimsetti <sravankumarl@in.ibm.com>